--- a/index.css
+++ b/index.css
@@ -1,24 +1,35 @@
 body {
-    background-image: url("station.jpg");
-    background-size: cover;
+    margin: 0;
+    background: linear-gradient(rgb(0,0,0, 0.7),rgba(0,0,0, 0.5)), url("station.jpg")no-repeat center center fixed;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
-    color: yellow;
-    backdrop-filter: blur(10px);
-    padding: 2em;
+    color: white;
+    /*backdrop-filter: blur(10px);*/
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content {
+    max-width: 520px;
 }
 
 h1 {
-    font-size: 40px;
-    padding-top: 10px;
-    margin-bottom: 10px;
+    font-size: 2.5rem;
+    margin: 0;
 }
 
 h2 {
-    font-size: 50px;
-    margin-top: 0;
-    margin-bottom: 20px;
+    font-size: 3rem;
+    margin: 0;
+    padding-bottom: 30px;
+}
+
+
+p {
+    font-size: 1.5rem;
 }
 
 button {
@@ -28,15 +39,17 @@ button {
     color: white;
     font-weight: bold;
     width: 200px;
-    margin-bottom: 5px;
     border-radius: 5px;
 }
 
 #increment-btn {
-    background: darkred;
+    background: darkslateblue;
 }
 
 #save-btn {
     background: darkgreen;
 }
 
+#reset-btn {
+    background: darkred;
+}
