--- a/index.css
+++ b/index.css
@@ -1,19 +1,18 @@
 body {
     margin: 0;
-    background: linear-gradient(rgb(0,0,0, 0.7),rgba(0,0,0, 0.5)), url("station.jpg")no-repeat center center fixed;
+    background: linear-gradient(rgb(0,0,0, 0.7),rgba(0,0,0, 0.7)), url("station.jpg")no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
     color: white;
-    /*backdrop-filter: blur(10px);*/
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.content {
-    max-width: 520px;
 }
 
 h1 {
@@ -24,9 +23,7 @@ h1 {
 h2 {
     font-size: 3rem;
     margin: 0;
-    padding-bottom: 30px;
 }
-
 
 p {
     font-size: 1.5rem;
@@ -41,10 +38,11 @@ button {
     width: 200px;
     border-radius: 5px;
     margin-top: 15px;
+    cursor: pointer;
 }
 
 #increment-btn {
-    background: darkslateblue;
+    background: darkolivegreen;
 }
 
 #save-btn {
@@ -53,4 +51,8 @@ button {
 
 #reset-btn {
     background: darkred;
+}
+
+.content {
+    max-width: 520px;
 }
